test/sema/lazy_init.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn main(): void {
    let x: number;
    
    if 1.0 {
        x = 2.0;
    } else {
        x = 3.0;
    }

    x;
}

fn modifyImmutable(): void {
    let x: number = 1.0;
    
    if 1.0 {
        // CHECK: [[# @LINE + 1 ]]:11: error: 'x' cannot be mutated
        x = 1.0;
    } else {
        // CHECK: [[# @LINE + 1 ]]:11: error: 'x' cannot be mutated
        x = 2.0;
    }

    // CHECK: [[# @LINE + 1 ]]:7: error: 'x' cannot be mutated
    x = 3.0;
}

fn uninitOneBranch(): void {
    let x: number;
    
    if 1.0 {
        let x: number;
        x = 1.0; // init inner 'x'
    } else {
        x = 2.0;
    }

    // CHECK: [[# @LINE + 1 ]]:5: error: 'x' is not initialized
    x;
}

fn initEveryBranch(): void {
    var x: number;
    
    if 1.0 {
        x = 1.0;
    } else {
        x = 2.0;
    }

    // CHECK-NOT: [[# @LINE + 1 ]]:5: error
    x;
}

fn initConditionVar(): void {
    var x: number;
    
    // CHECK: [[# @LINE + 1 ]]:15: error: 'x' is not initialized
    if 1.0 || x {
        x = 1.0;
    // CHECK: [[# @LINE + 1 ]]:22: error: 'x' is not initialized
    } else if 0.0 && x == 2.0 {
        x = 3.0;
    } else {
        x = 2.0;
    }

    // CHECK-NOT: [[# @LINE + 1 ]]:5: error
    x;
}

fn loop(): void {
    let x: number;
    var y: number;
    
    while 1.0 {
        // CHECK: [[# @LINE + 1 ]]:11: error: 'x' cannot be mutated
        x = 1.0;

        // CHECK-NOT: [[# @LINE + 1 ]]:11: error
        y = 1.0;
    }

    // CHECK: [[# @LINE + 1 ]]:5: error: 'x' is not initialized
    x;
    // CHECK: [[# @LINE + 1 ]]:5: error: 'y' is not initialized
    y;
}

fn shadowInitialization(): void {
    let x: number;
    
    if 1.0 {
        let x: number;
        x = 1.0;
    } else {
        x = 2.0;
    }

    // CHECK: [[# @LINE + 1 ]]:5: error: 'x' is not initialized
    x;
}

fn shadowInitialized(): void {
    let x: number;
    
    if 1.0 {
        x = 1.0;
        let x: number;
        // CHECK: [[# @LINE + 1 ]]:9: error: 'x' is not initialized
        x;
    } else {
        x = 2.0;
    }

    x;
}

fn nestedInLoop(param: number): void {
    var x: number;

    if param {
        while param {
            if param {
                x = param - 1.0;
            }

            // CHECK: [[# @LINE + 1 ]]:29: error: 'x' is not initialized
            var y: number = x;
        }
    } else {
        while param {
            if param {
                x = param - 1.0;
            }

            // CHECK: [[# @LINE + 1 ]]:29: error: 'x' is not initialized
            var y: number = x;
        }
    }

    // CHECK: [[# @LINE + 2 ]]:5: error: 'x' is not initialized
    // CHECK: [[# @LINE + 1 ]]:9: error: 'x' is not initialized
    x + x;
}
